--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,17 +13,17 @@
     <ion-card-content>
       <form [formGroup]="formularioLogin">
         <ion-item>
-          <ion-label position="floating">Nombre</ion-label>
-          <ion-input formControlName="nombre"></ion-input>
+          <ion-label position="floating">Usuario</ion-label>
+          <ion-input formControlName="Usuario"></ion-input>
         </ion-item>
     
         <ion-item>
           <ion-label position="floating">Contraseña</ion-label>
-          <ion-input formControlName="password" type="password"></ion-input>
+          <ion-input formControlName="password" type="password" maxlength="4"></ion-input>
         </ion-item>
       </form>
       <br>
-      <ion-button (click)="ingresar()">Ingresar</ion-button>
+      <ion-button [routerLink]="['/home']" (click)="ingresar()">Ingresar</ion-button>
     </ion-card-content>
   </ion-card>
 
