--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -15,18 +15,18 @@
     <ion-card-content>
       <form [formGroup]="formularioRegistro">
         <ion-item>
-          <ion-label position="floating">Nombre</ion-label>
-          <ion-input formControlName="nombre"></ion-input>
+          <ion-label position="floating">Usuario</ion-label>
+          <ion-input formControlName="Usuario" maxlength="8" minlength="3"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Contraseña</ion-label>
-          <ion-input formControlName="password" type="password"></ion-input>
+          <ion-input formControlName="password" type="password" maxlength="4" placeholder="****"></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label position="floating">Confirmar contraseña</ion-label>
-          <ion-input formControlName="confirmacionPassword" type="password"></ion-input>
+          <ion-input formControlName="confirmacionPassword" type="password" maxlength="4" placeholder="****"></ion-input>
         </ion-item>
       </form>
       <br>
