--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -7,31 +7,38 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-card>
-    <ion-card>
-      <ion-card-title>Registro</ion-card-title>
-    </ion-card>
-    <ion-card-content>
-      <form [formGroup]="formularioRegistro">
-        <ion-item>
-          <ion-label position="floating">Usuario</ion-label>
-          <ion-input formControlName="Usuario" maxlength="8" minlength="3"></ion-input>
-        </ion-item>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Registro</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input formControlName="password" type="password" maxlength="4" placeholder="****"></ion-input>
-        </ion-item>
+  <div id="container" style="text-align: center; padding-top: 20px;">
+    <ion-item>
+      <ion-label position="stacked">Nombre</ion-label>
+      <ion-input [(ngModel)]="nombre" type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Apellido</ion-label>
+      <ion-input [(ngModel)]="apellido" type="text"></ion-input>
+    </ion-item>
 
-        <ion-item>
-          <ion-label position="floating">Confirmar contraseña</ion-label>
-          <ion-input formControlName="confirmacionPassword" type="password" maxlength="4" placeholder="****"></ion-input>
-        </ion-item>
-      </form>
-      <br>
-      <ion-button (click)="guardar()">Registrarse</ion-button>
-    </ion-card-content>
-  </ion-card>
+    <ion-item>
+      <ion-label position="stacked">Carrera</ion-label>
+      <ion-select [(ngModel)]="carrera">
+        <ion-select-option value="Ingeniera en Informática">Ingeniera en Informática</ion-select-option>
+        <ion-select-option value="Técnico en Infraestructura Tecnológica">Técnico en Infraestructura Tecnológica</ion-select-option>
+        <ion-select-option value="Desarrollo de Aplicaciones">Desarrollo de Aplicaciones</ion-select-option>
+        <ion-select-option value="Analista Programador">Analista Programador</ion-select-option>
+      </ion-select>
+    </ion-item>
 
+    <ion-item>
+      <ion-label position="stacked">RUT</ion-label>
+      <ion-input [(ngModel)]="rut" type="text"></ion-input>
+    </ion-item>
+
+    <ion-button expand="full" (click)="register()">Registrarse</ion-button>
+  </div>
 </ion-content>
