--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true" class="header-animation">
-  <ion-toolbar color="primary">
+  <ion-toolbar color="tertiary">
     <ion-title>
       Iniciar Sesión
     </ion-title>
@@ -18,8 +18,8 @@
       <ion-icon name="lock-closed" slot="start"></ion-icon>
       <ion-input [(ngModel)]="password" type="password"></ion-input>
     </ion-item>
-    <ion-button expand="full" (click)="login()">Ingresar</ion-button>
-    <ion-button expand="full" (click)="register()">Registrarse</ion-button>
-    <p>¿Olvidaste tu contraseña? <a (click)="recuperarContrasena()">Recuperar</a></p>
+    <ion-button expand="full" (click)="login()" color="tertiary">Ingresar</ion-button>
+    <ion-button expand="full" (click)="register()" color="tertiary">Registrarse</ion-button>
+    <p>¿Olvidaste tu contraseña? <a (click)="recuperarContrasena()" color="tertiary">Recuperar</a></p>
   </div>
 </ion-content>
