--- a/src/app/recuperar/recuperar.page.html
+++ b/src/app/recuperar/recuperar.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="primary">
+  <ion-toolbar color="tertiary">
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -14,6 +14,6 @@
       <ion-input [(ngModel)]="usuario" type="text"></ion-input>
     </ion-item>
     <br>
-    <ion-button expand="full" (click)="recuperarPassword()">Recuperar Contraseña</ion-button>
+    <ion-button expand="full" (click)="recuperarPassword()" color="tertiary">Recuperar Contraseña</ion-button>
   </div>
 </ion-content>
